@@ -1,5 +1,7 @@
 package com.einfari.springbootthymeleafvideoaudioextractor.application;
 
+import com.einfari.springbootthymeleafvideoaudioextractor.common.MediaException;
+import com.github.kokorin.jaffree.JaffreeException;
 import com.github.kokorin.jaffree.LogLevel;
 import com.github.kokorin.jaffree.StreamType;
 import com.github.kokorin.jaffree.ffmpeg.FFmpeg;
@@ -14,7 +16,8 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.time.Instant;
+import java.util.Objects;
 
 /**
  * @author : Gonzalo Ramos Zúñiga
@@ -29,29 +32,47 @@ public class MediaComponent {
     private final Path FFmpegPath;
     private final Path FFprobePath;
 
-    public String extractAudio(MultipartFile file) throws IOException {
-        String filename = "temp";
-        String codecName = getAudioCodecName(file);
-        String audioFileExtension = getAudioFileExtension(codecName);
-        FFmpeg.atPath(FFmpegPath)
-                .setLogLevel(LogLevel.QUIET)
-                .setOverwriteOutput(true)
-                .addInput(PipeInput.pumpFrom(file.getInputStream()))
-                .addArguments("-map", "0:a:0")
-                .addArguments("-acodec", "copy")
-                .addOutput(UrlOutput.toPath(Paths.get(TEMP_PATH, filename + audioFileExtension)))
-                .execute();
-        return filename + audioFileExtension;
+    public String extractAudio(MultipartFile file) {
+        try {
+            String filename = buildFilename(file, getAudioCodecName(file));
+            FFmpeg.atPath(FFmpegPath)
+                    .setLogLevel(LogLevel.QUIET)
+                    .setOverwriteOutput(true)
+                    .addInput(PipeInput.pumpFrom(file.getInputStream()))
+                    .addArguments("-map", "0:a:0")
+                    .addArguments("-acodec", "copy")
+                    .addOutput(UrlOutput.toPath(Path.of(TEMP_PATH, filename)))
+                    .execute();
+            return filename;
+        } catch (IOException | JaffreeException e) {
+            log.error(e.getMessage(), e);
+            throw new MediaException("Audio extraction failed");
+        }
     }
 
-    public String getAudioCodecName(MultipartFile file) throws IOException {
-        FFprobeResult probeResult = FFprobe.atPath(FFprobePath)
-                .setShowStreams(true)
-                .setSelectStreams(StreamType.AUDIO)
-                .setLogLevel(LogLevel.QUIET)
-                .setInput(file.getInputStream())
-                .execute();
-        return probeResult.getStreams().get(0).getCodecName();
+    public String getAudioCodecName(MultipartFile file) {
+        try {
+            FFprobeResult probeResult = FFprobe.atPath(FFprobePath)
+                    .setShowStreams(true)
+                    .setSelectStreams(StreamType.AUDIO)
+                    .setLogLevel(LogLevel.QUIET)
+                    .setInput(file.getInputStream())
+                    .execute();
+            return probeResult.getStreams().get(0).getCodecName();
+        } catch (IOException | JaffreeException e) {
+            log.error(e.getMessage(), e);
+            throw new MediaException("Audio format could not be identified.");
+        }
+    }
+
+    public String buildFilename(MultipartFile file, String codecName) {
+        StringBuilder stringBuilder = new StringBuilder();
+        stringBuilder.append(Instant.now().toEpochMilli());
+        stringBuilder.append("_");
+        stringBuilder.append(Path.of(Objects.requireNonNull(file.getOriginalFilename())).getFileName());
+        stringBuilder.delete(stringBuilder.lastIndexOf("."), stringBuilder.length());
+        stringBuilder.append(getAudioFileExtension(codecName));
+        return stringBuilder.toString();
     }
 
     public String getAudioFileExtension(String codecName) {
@@ -60,7 +81,7 @@ public class MediaComponent {
             case "mp3" -> ".mp3";
             case "opus" -> ".opus";
             case "vorbis" -> ".ogg";
-            default -> throw new IllegalArgumentException("Audio format not supported.");
+            default -> throw new MediaException("Audio format not supported.");
         };
     }
 
